--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,6 @@
 <h1>This is the index page</h1>
 <a href="http://localhost:8000/allmovies/">All Movies</a>
 <a href="http://localhost:8000/allraters/">All Raters</a>
+<a href="http://localhost:8000/top20">Top 20 Movies</a>
   </body>
 </html>
