--- a/templates/top_20.html
+++ b/templates/top_20.html
@@ -2,10 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>TOP 20 PAGE!!!!</title>
+    <title>TOP 20 PAGE</title>
   </head>
   <body>
-    <h2>{{ this }}</h2>
-    
+    <h2>Top 20 Movies</h2>
+    <h4><a href="http://localhost:8000/">Home</a></h4>
+
+    {% for movie in twenty %}
+     <p>
+       <a href="/movie/{{movie.id}}">{{ movie }} </a>
+
+
+     </p>
+     {% endfor %}
+    </p>
   </body>
 </html>
