--- a/templates/all_movies.html
+++ b/templates/all_movies.html
@@ -1,12 +1,16 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
   <head>
+      <link rel="stylesheet" type="text/css" href="{% static 'movieratings/index.css' %}" />
     <meta charset="utf-8">
     <title>all movies</title>
   </head>
   <body>
+    <div>
     <h1>All Movies</h1>
-    <h3><a href="http://localhost:8000/">Home</a></h3>
+    <h3><a href="http://localhost:8000/">Home</a></h3></div>
     <p>
          {% for row in all_movies %}
           <p>
